[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"


[project]

name = "blamegame"

version = "0.9.0"

authors = [
	{ name="Ryan L. Boyd", email="ryan@ryanboyd.io" },
]

description = "BlameGame is a Python package for detecting internal/external (dispositional/situational) attributions in text."

readme = "README.MD"

requires-python = ">=3.10"

dependencies=["tqdm>=4.66.5",
              "nltk>=3.9.1",
              "transformers>=4.48.2",
              "torch>=2.5.1"]

classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["blamegame"]
include-package-data = true

[project.urls]

Homepage = "https://github.com/ryanboyd/blamegame"

Issues = "https://github.com/ryanboyd/blamegame/issues"